cargo-features = ["edition2021"]

[package]
name = "custard-example-entrypoint"
version = "0.1.0"
authors = ["Ashlotl <thesupremeliverwurst@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
custard-core = {path = "../custard-core"}
custard-use = {path = "../custard-use"}